--- a/src/simplify_deployment/data_science/convert_fold_with_genome.ipynb
+++ b/src/simplify_deployment/data_science/convert_fold_with_genome.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,35 +22,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fold 0 done.\n",
-      "Fold 1 done.\n",
-      "Fold 2 done.\n",
-      "Fold 3 done.\n",
-      "Fold 4 done.\n",
-      "Fold 5 done.\n",
-      "Fold 6 done.\n",
-      "Fold 7 done.\n",
-      "Fold 8 done.\n",
-      "Fold 9 done.\n",
-      "Fold 10 done.\n",
-      "Fold 11 done.\n"
+     "ename": "AttributeError",
+     "evalue": "'DataFrame' object has no attribute 'to_frame'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_6227/703595368.py\u001b[0m in \u001b[0;36m?\u001b[0;34m()\u001b[0m\n\u001b[1;32m     23\u001b[0m     \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m     \u001b[0;31m# Write\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m     \u001b[0mX_train\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_parquet\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtarget_folder\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;34mf\"\u001b[0m\u001b[0;34mX_train_fold_\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0mfold\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m.parquet\u001b[0m\u001b[0;34m\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 27\u001b[0;31m     \u001b[0my_train\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_frame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_parquet\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtarget_folder\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;34mf\"\u001b[0m\u001b[0;34my_train_fold_\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0mfold\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m.parquet\u001b[0m\u001b[0;34m\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     28\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m     \u001b[0mX_test\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_parquet\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtarget_folder\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;34mf\"\u001b[0m\u001b[0;34mX_test_fold_\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0mfold\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m.parquet\u001b[0m\u001b[0;34m\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m     \u001b[0my_test\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_frame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_parquet\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtarget_folder\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;34mf\"\u001b[0m\u001b[0;34my_test_fold_\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0mfold\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m.parquet\u001b[0m\u001b[0;34m\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.cache/pypoetry/virtualenvs/simplify-deployment-2FnGvFJr-py3.12/lib/python3.12/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m?\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   6295\u001b[0m             \u001b[0;32mand\u001b[0m \u001b[0mname\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_accessors\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   6296\u001b[0m             \u001b[0;32mand\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   6297\u001b[0m         \u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   6298\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 6299\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'to_frame'"
      ]
     }
    ],
    "source": [
-    "target_folder = Path(\"/home/thomas/repos/simplify_deployment/data/data_science/50_gen_s1/folds_converted_with_genome\")\n",
+    "target_folder = Path(\"/home/thomas/repos/simplify_deployment/data/simplify_1_0/folds_converted_with_genome\")\n",
     "for fold in range(12):\n",
     "    # Read\n",
     "    org = Organism.from_yaml(\n",
-    "        path_config=\"/home/thomas/repos/simplify_deployment/src/simplify_deployment/config/lag_25_lots_of_vars.yaml\",\n",
-    "        path_genome=f\"/home/thomas/repos/simplify_deployment/data/data_science/50_gen_s1/best_genome/lag_25_s1_50_gen_fold_{fold}_best_genome.yaml\",\n",
+    "        path_config=\"/home/thomas/repos/simplify_deployment/src/simplify_deployment/config/lag_25.yaml\",\n",
+    "        path_genome=f\"/home/thomas/repos/simplify_deployment/data/data_science/50_gen_s1/lag_25_simplify_1_0.yaml\",\n",
     "    )\n",
     "    y_train, X_train = org.create_y_X(\n",
     "        y = pd.read_parquet(\n",
@@ -71,41 +65,19 @@
     "\n",
     "    # Write\n",
     "    X_train.to_parquet(target_folder/f\"X_train_fold_{fold}.parquet\")\n",
-    "    y_train.to_frame().to_parquet(target_folder/f\"y_train_fold_{fold}.parquet\")\n",
+    "    y_train.to_parquet(target_folder/f\"y_train_fold_{fold}.parquet\")\n",
     "\n",
     "    X_test.to_parquet(target_folder/f\"X_test_fold_{fold}.parquet\")\n",
-    "    y_test.to_frame().to_parquet(target_folder/f\"y_test_fold_{fold}.parquet\")\n",
+    "    y_test.to_parquet(target_folder/f\"y_test_fold_{fold}.parquet\")\n",
     "\n",
     "    print(f\"Fold {fold} done.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2023-06-15 22:14:00+00:00    -53.877\n",
-       "2023-06-15 22:29:00+00:00    -54.506\n",
-       "2023-06-15 22:44:00+00:00     30.219\n",
-       "2023-06-15 22:59:00+00:00    136.135\n",
-       "2023-06-15 23:14:00+00:00     42.267\n",
-       "                              ...   \n",
-       "2023-10-03 21:29:00+00:00     -2.456\n",
-       "2023-10-03 21:44:00+00:00     86.405\n",
-       "2023-10-03 21:59:00+00:00    188.829\n",
-       "2023-10-03 22:14:00+00:00    -26.519\n",
-       "2023-10-03 22:29:00+00:00     47.031\n",
-       "Name: siCumulative, Length: 10562, dtype: float64"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "y_train"
    ]
